renew code coverage

--- a/TestDocuments/TestPlan/TestAll.html
+++ b/TestDocuments/TestPlan/TestAll.html
@@ -22,7 +22,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">136</td>
+		<td style="border-bottom:1px solid #CCC;">163</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -52,7 +52,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">146</td>
+		<td style="border-bottom:1px solid #CCC;">173</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -82,7 +82,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">156</td>
+		<td style="border-bottom:1px solid #CCC;">183</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -112,7 +112,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">163</td>
+		<td style="border-bottom:1px solid #CCC;">190</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -142,7 +142,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">171</td>
+		<td style="border-bottom:1px solid #CCC;">198</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -172,7 +172,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">179</td>
+		<td style="border-bottom:1px solid #CCC;">206</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -202,7 +202,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">187</td>
+		<td style="border-bottom:1px solid #CCC;">214</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -232,7 +232,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">195</td>
+		<td style="border-bottom:1px solid #CCC;">222</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -262,7 +262,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">203</td>
+		<td style="border-bottom:1px solid #CCC;">230</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -292,7 +292,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">213</td>
+		<td style="border-bottom:1px solid #CCC;">240</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -322,7 +322,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">249</td>
+		<td style="border-bottom:1px solid #CCC;">276</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -352,7 +352,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">258</td>
+		<td style="border-bottom:1px solid #CCC;">285</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -382,7 +382,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">266</td>
+		<td style="border-bottom:1px solid #CCC;">293</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -412,7 +412,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">273</td>
+		<td style="border-bottom:1px solid #CCC;">300</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -442,7 +442,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">280</td>
+		<td style="border-bottom:1px solid #CCC;">307</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -472,7 +472,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">295</td>
+		<td style="border-bottom:1px solid #CCC;">322</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -502,7 +502,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">306</td>
+		<td style="border-bottom:1px solid #CCC;">333</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -532,7 +532,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">321</td>
+		<td style="border-bottom:1px solid #CCC;">348</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -562,7 +562,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">333</td>
+		<td style="border-bottom:1px solid #CCC;">360</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -592,7 +592,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">345</td>
+		<td style="border-bottom:1px solid #CCC;">372</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -622,7 +622,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">352</td>
+		<td style="border-bottom:1px solid #CCC;">379</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -652,7 +652,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">359</td>
+		<td style="border-bottom:1px solid #CCC;">386</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -682,7 +682,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">391</td>
+		<td style="border-bottom:1px solid #CCC;">418</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -712,7 +712,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">517</td>
+		<td style="border-bottom:1px solid #CCC;">544</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -742,7 +742,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">414</td>
+		<td style="border-bottom:1px solid #CCC;">441</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -772,7 +772,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">433</td>
+		<td style="border-bottom:1px solid #CCC;">460</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -802,10 +802,100 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">454</td>
+		<td style="border-bottom:1px solid #CCC;">481</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
 		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">TestCreateAuthURL</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">571</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;">method untuk mengetes createAuthURL</td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testGetUserInfo</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">579</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;">method untuk mengecek getUserInfo</td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testLogout</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Null</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">586</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;">method untuk mengecek logout</td>
 	</tr>
 </table>
