--- a/TestDocuments/TestPlan/TestAll.html
+++ b/TestDocuments/TestPlan/TestAll.html
@@ -22,7 +22,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">214</td>
+		<td style="border-bottom:1px solid #CCC;">345</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -52,7 +52,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">229</td>
+		<td style="border-bottom:1px solid #CCC;">360</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -82,7 +82,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">243</td>
+		<td style="border-bottom:1px solid #CCC;">374</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -112,7 +112,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">238</td>
+		<td style="border-bottom:1px solid #CCC;">369</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -142,7 +142,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">252</td>
+		<td style="border-bottom:1px solid #CCC;">383</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -172,7 +172,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">262</td>
+		<td style="border-bottom:1px solid #CCC;">393</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -202,7 +202,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">272</td>
+		<td style="border-bottom:1px solid #CCC;">403</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -232,7 +232,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">279</td>
+		<td style="border-bottom:1px solid #CCC;">410</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -262,7 +262,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">287</td>
+		<td style="border-bottom:1px solid #CCC;">418</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -292,7 +292,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">295</td>
+		<td style="border-bottom:1px solid #CCC;">426</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -322,7 +322,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">303</td>
+		<td style="border-bottom:1px solid #CCC;">434</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -352,7 +352,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">311</td>
+		<td style="border-bottom:1px solid #CCC;">442</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -382,7 +382,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">319</td>
+		<td style="border-bottom:1px solid #CCC;">450</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -412,7 +412,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">329</td>
+		<td style="border-bottom:1px solid #CCC;">460</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -442,7 +442,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">365</td>
+		<td style="border-bottom:1px solid #CCC;">496</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -472,7 +472,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">374</td>
+		<td style="border-bottom:1px solid #CCC;">505</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -502,7 +502,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">382</td>
+		<td style="border-bottom:1px solid #CCC;">513</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -532,7 +532,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">389</td>
+		<td style="border-bottom:1px solid #CCC;">520</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -562,7 +562,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">396</td>
+		<td style="border-bottom:1px solid #CCC;">527</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -592,7 +592,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">411</td>
+		<td style="border-bottom:1px solid #CCC;">542</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -622,7 +622,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">422</td>
+		<td style="border-bottom:1px solid #CCC;">553</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -652,7 +652,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">437</td>
+		<td style="border-bottom:1px solid #CCC;">568</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -682,7 +682,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">449</td>
+		<td style="border-bottom:1px solid #CCC;">580</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -712,7 +712,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">461</td>
+		<td style="border-bottom:1px solid #CCC;">592</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -742,7 +742,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">468</td>
+		<td style="border-bottom:1px solid #CCC;">599</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -772,7 +772,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">475</td>
+		<td style="border-bottom:1px solid #CCC;">606</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -802,7 +802,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">507</td>
+		<td style="border-bottom:1px solid #CCC;">638</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -832,7 +832,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">691</td>
+		<td style="border-bottom:1px solid #CCC;">822</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -862,7 +862,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">588</td>
+		<td style="border-bottom:1px solid #CCC;">719</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -892,7 +892,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">607</td>
+		<td style="border-bottom:1px solid #CCC;">738</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -922,7 +922,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">628</td>
+		<td style="border-bottom:1px solid #CCC;">759</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -952,7 +952,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">718</td>
+		<td style="border-bottom:1px solid #CCC;">849</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -982,7 +982,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">726</td>
+		<td style="border-bottom:1px solid #CCC;">857</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1012,7 +1012,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">733</td>
+		<td style="border-bottom:1px solid #CCC;">864</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1042,11 +1042,161 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">194</td>
+		<td style="border-bottom:1px solid #CCC;">325</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
 		<td style="border-bottom:1px solid #CCC;">get all record by email with limit</td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testLimitRequestBy</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">196</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">testLimitRequestByID</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Object</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Object</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">217</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden1</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">238</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden2</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">262</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
+	</tr>
+</table>
+<table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Name</th>
+		<td style="border-bottom:1px solid #CCC;">requestTypesForbidden3</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
+		<td style="border-bottom:1px solid #CCC;">String</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
+		<td style="border-bottom:1px solid #CCC;">C:\xampp\htdocs\BlueTape\www\application\controllers\tests\TestAll.php</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
+		<td style="border-bottom:1px solid #CCC;">300</td>
+	</tr>
+	<tr>
+		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
+		<td style="border-bottom:1px solid #CCC;"></td>
 	</tr>
 </table>
 <table style="width:100%; font-size:small; margin:10px 0; border-collapse:collapse; border:1px solid #CCC;">
@@ -1072,7 +1222,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">535</td>
+		<td style="border-bottom:1px solid #CCC;">666</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
@@ -1102,7 +1252,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">565</td>
+		<td style="border-bottom:1px solid #CCC;">696</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
