--- a/TestDocuments/TestPlan/TestTranskripModel.html
+++ b/TestDocuments/TestPlan/TestTranskripModel.html
@@ -186,7 +186,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Test Datatype</th>
-		<td style="border-bottom:1px solid #CCC;">String</td>
+		<td style="border-bottom:1px solid #CCC;">Array</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Expected Datatype</th>
@@ -194,7 +194,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Result</th>
-		<td style="border-bottom:1px solid #CCC;"><span style="color: #0C0;">Passed</span></td>
+		<td style="border-bottom:1px solid #CCC;"><span style="color: #C00;">Failed</span></td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">File Name</th>
@@ -202,7 +202,7 @@
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Line Number</th>
-		<td style="border-bottom:1px solid #CCC;">152</td>
+		<td style="border-bottom:1px solid #CCC;">129</td>
 	</tr>
 	<tr>
 		<th style="text-align: left; border-bottom:1px solid #CCC;">Notes</th>
